force-app/main/default/objects/SR_Task_Determination__c/SR_Task_Determination__c.object-meta.xml
<CustomObject>
    <description>This Object maintains the task distribution logic which is according to the Channel and Case Sub Type.</description>
    <label>SR Task Determination</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Determination ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>