force-app/main/default/objects/SR_Task_Determination__c/fields/Initial_Task_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Initial_Task_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initial Task Indicator(Y/N)</description>
    <label>Initial Task Indicator</label>
    <type>Checkbox</type>
</CustomField>