force-app/main/default/objects/SR_Task_Determination__c/fields/Next_Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Code__c</fullName>
    <label>Next Task Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>