force-app/main/default/objects/SR_Task_Determination__c/fields/Next_Task_Resolver__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Resolver__c</fullName>
    <label>Next Task Resolver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>